fixed mobile view overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,10 +40,10 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
-  max-width: 100vw;
   overflow-x: hidden;
   color: var(--color-text-dark);
   background-color: white;
